SPRINT 1: Database Design

--- a/public/admin-side/admin/login.html
+++ b/public/admin-side/admin/login.html
@@ -494,6 +494,8 @@
         </div>
     </div>
 
+
+        <script src="../js/script.js"></script>
     <script>
         function togglePassword() {
             const passwordInput = document.getElementById('password');
