--- a/public/admin-side/admin/index.html
+++ b/public/admin-side/admin/index.html
@@ -267,8 +267,15 @@
                 </div>
 
                 <div class="welcome-banner mb-4">
-                    <h1>Welcome back, Prince Gallardo</h1>
+                    <h1>Welcome back, <span id="name"></span></h1>
                     <p>Manage your hotel operations from this dashboard</p>
+<!-- 
+                    <button onclick="getUser(1)">Load User</button>
+                    <div id="user-info">
+                    <p><strong>Name:</strong> <span id="name"></span></p>
+                    <p><strong>Email:</strong> <span id="email"></span></p>
+                    <p><strong>Role:</strong> <span id="role"></span></p>
+                    </div> -->
                 </div>
 
                 <div class="dashboard-content-wrapper">
@@ -392,7 +399,9 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../script.js"></script>
+    <script src="../js/script.js"></script>
+
+    <!-- sidebar toggle script -->
     <script>
         // Sidebar toggle functionality aligned with receptionist dashboard
         document.addEventListener('DOMContentLoaded', function() {
