--- a/public/admin-side/admin/index.html
+++ b/public/admin-side/admin/index.html
@@ -228,10 +228,10 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="login.html" data-tooltip="Logout">
+                        <button class="nav-link"data-tooltip="Logout" onclick="logout()" type="button">
                             <i class="fas fa-sign-out-alt"></i>
                             <span>Logout</span>
-                        </a>
+                        </button>
                     </li>
                 </ul>
                 
@@ -269,13 +269,6 @@
                 <div class="welcome-banner mb-4">
                     <h1>Welcome back, <span id="name"></span></h1>
                     <p>Manage your hotel operations from this dashboard</p>
-<!-- 
-                    <button onclick="getUser(1)">Load User</button>
-                    <div id="user-info">
-                    <p><strong>Name:</strong> <span id="name"></span></p>
-                    <p><strong>Email:</strong> <span id="email"></span></p>
-                    <p><strong>Role:</strong> <span id="role"></span></p>
-                    </div> -->
                 </div>
 
                 <div class="dashboard-content-wrapper">
@@ -400,6 +393,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/script.js"></script>
+    <script src="../js/auth.js"></script>
 
     <!-- sidebar toggle script -->
     <script>
@@ -440,6 +434,7 @@
                 }
             }
         });
+
     </script>
 </body>
 </html>
