--- a/public/admin-side/receptionist/receptionistdashboard.html
+++ b/public/admin-side/receptionist/receptionistdashboard.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&family=Poppins:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link href="../styles.css" rel="stylesheet">
+    <link href="../css/styles.css" rel="stylesheet">
     <link href="receptionist.css" rel="stylesheet">
     <script>
         (function() {
@@ -327,11 +327,11 @@
                             <span>Settings</span>
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../admin/login.html" data-tooltip="Logout">
+                  <li class="nav-item">
+                        <button class="nav-link"data-tooltip="Logout" onclick="logout()" type="button">
                             <i class="fas fa-sign-out-alt"></i>
                             <span>Logout</span>
-                        </a>
+                        </button>
                     </li>
                 </ul>
                 
@@ -495,7 +495,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="receptionist.js"></script>
+     <script src="../js/script.js"></script>
     <script>
         // Sidebar toggle functionality aligned to index.html behavior
         document.addEventListener('DOMContentLoaded', function() {
