--- a/public/admin-side/admin/feedback.html
+++ b/public/admin-side/admin/feedback.html
@@ -617,11 +617,11 @@
                             <span>Settings</span>
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="login.html" data-tooltip="Logout">
+                      <li class="nav-item">
+                        <button class="nav-link"data-tooltip="Logout" onclick="logout()" type="button">
                             <i class="fas fa-sign-out-alt"></i>
                             <span>Logout</span>
-                        </a>
+                        </button>
                     </li>
                 </ul>
                 
@@ -981,6 +981,8 @@
         </div>
     </div>
     
+       <script src="../js/script.js"></script>
+        <script src="../js/auth.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const openCard = document.getElementById('openFeedbackModal');
