--- a/public/admin-side/admin/occupancy.html
+++ b/public/admin-side/admin/occupancy.html
@@ -544,11 +544,11 @@
                             <span>Settings</span>
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="login.html" data-tooltip="Logout">
+                     <li class="nav-item">
+                        <button class="nav-link"data-tooltip="Logout" onclick="logout()" type="button">
                             <i class="fas fa-sign-out-alt"></i>
                             <span>Logout</span>
-                        </a>
+                        </button>
                     </li>
                 </ul>
                 
@@ -797,7 +797,8 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../script.js"></script>
+       <script src="../js/script.js"></script>
+    <script src="../js/auth.js"></script>
     <script>
         // Animate progress bars on load
         window.addEventListener('load', function() {
