--- a/public/admin-side/admin/reports.html
+++ b/public/admin-side/admin/reports.html
@@ -567,10 +567,10 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="login.html" data-tooltip="Logout">
+                        <button class="nav-link"data-tooltip="Logout" onclick="logout()" type="button">
                             <i class="fas fa-sign-out-alt"></i>
                             <span>Logout</span>
-                        </a>
+                        </button>
                     </li>
                 </ul>
                 
@@ -811,7 +811,9 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../script.js"></script>
+      <script src="../js/script.js"></script>
+    <script src="../js/auth.js"></script>
+
     <script>
         // Animate progress bars on load
         window.addEventListener('load', function() {
