--- a/public/admin-side/admin/reservations.html
+++ b/public/admin-side/admin/reservations.html
@@ -136,10 +136,10 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="login.html" data-tooltip="Logout">
+                        <button class="nav-link"data-tooltip="Logout" onclick="logout()" type="button">
                             <i class="fas fa-sign-out-alt"></i>
                             <span>Logout</span>
-                        </a>
+                        </button>
                     </li>
                 </ul>
                 
@@ -548,7 +548,9 @@
             </div>
         </div>
     </div>
-    
+    <script src="../js/script.js"></script>
+    <script src="../js/auth.js"></script>
+
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             if (window._resPageWired) return; // prevent double-binding that can cause stuck backdrops
