--- a/public/admin-side/admin/roommanagement.html
+++ b/public/admin-side/admin/roommanagement.html
@@ -248,11 +248,11 @@
                             <span>Settings</span>
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="login.html" data-tooltip="Logout">
+                   <li class="nav-item">
+                        <button class="nav-link"data-tooltip="Logout" onclick="logout()" type="button">
                             <i class="fas fa-sign-out-alt"></i>
                             <span>Logout</span>
-                        </a>
+                        </button>
                     </li>
                 </ul>
                 
@@ -496,7 +496,8 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../script.js"></script>
+    <script src="../js/script.js"></script>
+    <script src="../js/auth.js"></script>
     <script>
         // Neutralize any entrance animations applied by global scripts to avoid jumps
         document.addEventListener('DOMContentLoaded', function() {
