--- a/public/admin-side/receptionist/ReceptionistSecurity.html
+++ b/public/admin-side/receptionist/ReceptionistSecurity.html
@@ -331,11 +331,11 @@
                             <span>Settings</span>
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../admin/login.html" data-tooltip="Logout">
+                     <li class="nav-item">
+                        <button class="nav-link"data-tooltip="Logout" onclick="logout()" type="button">
                             <i class="fas fa-sign-out-alt"></i>
                             <span>Logout</span>
-                        </a>
+                        </button>
                     </li>
                 </ul>
                 
@@ -486,6 +486,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="receptionist.js"></script>
+       <script src="../js/script.js"></script>
+    <script src="../js/auth.js"></script>
     <script>
         // Sidebar toggle functionality aligned to index.html behavior
         document.addEventListener('DOMContentLoaded', function() {
