--- a/public/admin-side/receptionist/checkoutdetails.html
+++ b/public/admin-side/receptionist/checkoutdetails.html
@@ -199,10 +199,10 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../admin/login.html" data-tooltip="Logout">
+                        <button class="nav-link"data-tooltip="Logout" onclick="logout()" type="button">
                             <i class="fas fa-sign-out-alt"></i>
                             <span>Logout</span>
-                        </a>
+                        </button>
                     </li>
                 </ul>
                 
@@ -316,6 +316,8 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="receptionist.js"></script>
+       <script src="../js/script.js"></script>
+    <script src="../js/auth.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const messageBox = document.getElementById('actionMessage');
