--- a/public/admin-side/receptionist/rebooking.html
+++ b/public/admin-side/receptionist/rebooking.html
@@ -329,11 +329,11 @@
                             <span>Settings</span>
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../admin/login.html" data-tooltip="Logout">
+                       <li class="nav-item">
+                        <button class="nav-link"data-tooltip="Logout" onclick="logout()" type="button">
                             <i class="fas fa-sign-out-alt"></i>
                             <span>Logout</span>
-                        </a>
+                        </button>
                     </li>
                 </ul>
                 
@@ -539,6 +539,9 @@
             </div>
         </div>
     </div>
+
+       <script src="../js/script.js"></script>
+    <script src="../js/auth.js"></script>
 
     <script>
         // Wire up View details and write back to the card (Rebooking)
