--- a/public/admin-side/receptionist/reservationdetails.html
+++ b/public/admin-side/receptionist/reservationdetails.html
@@ -195,10 +195,10 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../admin/login.html" data-tooltip="Logout">
+                        <button class="nav-link"data-tooltip="Logout" onclick="logout()" type="button">
                             <i class="fas fa-sign-out-alt"></i>
                             <span>Logout</span>
-                        </a>
+                        </button>
                     </li>
                 </ul>
                 
@@ -472,5 +472,8 @@
             }
         });
     </script>
+
+       <script src="../js/script.js"></script>
+    <script src="../js/auth.js"></script>
 </body>
 </html>
