--- a/public/admin-side/receptionist/walkinbooking.html
+++ b/public/admin-side/receptionist/walkinbooking.html
@@ -223,11 +223,11 @@
                             <span>Settings</span>
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../admin/login.html" data-tooltip="Logout">
+                          <li class="nav-item">
+                        <button class="nav-link"data-tooltip="Logout" onclick="logout()" type="button">
                             <i class="fas fa-sign-out-alt"></i>
                             <span>Logout</span>
-                        </a>
+                        </button>
                     </li>
                 </ul>
                 
@@ -514,6 +514,9 @@
             }
         });
     </script>
+
+       <script src="../js/script.js"></script>
+    <script src="../js/auth.js"></script>
 </body>
 </html>
 
