--- a/public/admin-side/admin/usermanagement.html
+++ b/public/admin-side/admin/usermanagement.html
@@ -138,6 +138,8 @@
                     </div>
                 </div>
 
+                <ul id="userList"></ul>
+
                 <div class="reservations-table-container">
                     <div class="table-responsive">
                         <table class="table table-hover reservations-table">
@@ -151,66 +153,10 @@
                                     <th>Actions</th>
                                 </tr>
                             </thead>
-                            <tbody>
-                                <tr>
-                                    <td>
-                                        <div class="guest-info">
-                                            <i class="fas fa-user me-2"></i>
-                                            <span>Maria Santos</span>
-                                            <small class="guest-count">Joined 31/08/2024</small>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <div class="room-info">
-                                            <i class="fas fa-envelope me-2"></i>
-                                            <span>maria.santos@victoriamansions.com</span>
-                                            <small class="room-number">+63 912 345 6789</small>
-                                        </div>
-                                    </td>
-                                    <td><span class="status-badge status-booked">Admin</span></td>
-                                    <td><span class="status-badge status-checkedin">Active</span></td>
-                                    <td>1/20/2025, 8:30:00 AM</td>
-                                    <td>
-                                        <div class="action-buttons">
-                                            <button class="btn btn-sm btn-action" title="Edit">
-                                                <i class="fas fa-edit"></i>
-                                            </button>
-                                            <button class="btn btn-sm btn-action" title="Delete">
-                                                <i class="fas fa-trash"></i>
-                                            </button>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <div class="guest-info">
-                                            <i class="fas fa-user me-2"></i>
-                                            <span>John Dela Cruz</span>
-                                            <small class="guest-count">Joined 31/08/2024</small>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <div class="room-info">
-                                            <i class="fas fa-envelope me-2"></i>
-                                            <span>john.delacruz@victoriamansions.com</span>
-                                            <small class="room-number">+63 923 456 7890</small>
-                                        </div>
-                                    </td>
-                                    <td><span class="status-badge status-checkedin">Receptionist</span></td>
-                                    <td><span class="status-badge status-checkedin">Active</span></td>
-                                    <td>1/20/2025, 8:30:00 AM</td>
-                                    <td>
-                                        <div class="action-buttons">
-                                            <button class="btn btn-sm btn-action" title="Edit">
-                                                <i class="fas fa-edit"></i>
-                                            </button>
-                                            <button class="btn btn-sm btn-action" title="Delete">
-                                                <i class="fas fa-trash"></i>
-                                            </button>
-                                        </div>
-                                    </td>
-                                </tr>
+                           <tbody id="usersTableBody">
+
                             </tbody>
+
                         </table>
                     </div>
                 </div>
@@ -415,12 +361,17 @@
                     <form id="addUserForm">
                         <div class="mb-3">
                             <label class="form-label">Name</label>
-                            <input type="text" class="form-control" id="addUserName" placeholder="Enter full name" required>
+                             <input type="text" class="form-control" name="name" placeholder="Name" required>
                         </div>
                         <div class="mb-3">
                             <label class="form-label">Email</label>
-                            <input type="email" class="form-control" id="addUserEmail" placeholder="name@example.com" required>
+                             <input type="email" class="form-control" name="email" placeholder="Email" required>
                         </div>
+                         <div class="mb-3">
+                            <label class="form-label">Password</label>
+                             <input type="password" class="form-control" name="password" placeholder="Password" required>
+                        </div>
+
                         <div class="mb-3">
                             <label class="form-label">Contact Number</label>
                             <input type="tel" class="form-control" id="addUserPhone" placeholder="+63 9XX XXX XXXX" required>
@@ -428,25 +379,19 @@
                         <div class="row g-3">
                             <div class="col-md-6">
                                 <label class="form-label">Role</label>
-                                <select class="form-select" id="addUserRole" required>
-                                    <option value="Admin">Admin</option>
-                                    <option value="Receptionist">Receptionist</option>
-                                </select>
-                            </div>
-                            <div class="col-md-6">
-                                <label class="form-label">Status</label>
-                                <select class="form-select" id="addUserStatus" required>
-                                    <option value="Active">Active</option>
-                                    <option value="Inactive">Inactive</option>
+                                <select class="form-select" name="role" required>
+                                    <option value="admin">Admin</option>
+                                    <option value="receptionist">Receptionist</option>
                                 </select>
                             </div>
                         </div>
-                    </form>
+                  
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary" id="saveNewUser">Save User</button>
+                    <button type="submit" class="btn btn-primary">Save User</button>
                 </div>
+                  </form>
             </div>
         </div>
     </div>
@@ -498,8 +443,138 @@
             </div>
         </div>
     </div>
+
+
      <script src="../js/script.js"></script>
     <script src="../js/auth.js"></script>
+
+
+<!-- Create User -->
+<script>
+document.getElementById("addUserForm").addEventListener("submit", async function (e) {
+    e.preventDefault();
+
+    const formData = new FormData(this);
+
+    try {
+        const res = await fetch("http://localhost:8000/api/users", {
+            method: "POST",
+            credentials: "include",
+            headers: {
+                "Accept": "application/json"
+            },
+            body: formData
+        });
+
+        const data = await res.json();
+
+        if (!res.ok) {
+            if (res.status === 422 && data.errors?.email) {
+                alert("Email already registered");
+                return;
+            }
+            throw new Error(data.message || "Failed");
+        }
+
+        closeAddUserModal();
+        loadUsers();
+
+    } catch (err) {
+        console.error(err);
+        alert("Error adding user");
+    }
+});
+</script>
+
+
+<!-- Load Users -->
+<script>
+const tableBody = document.getElementById("usersTableBody");
+async function loadUsers() {
+    try {
+        const res = await fetch("http://localhost:8000/api/users", {
+            credentials: "include",
+            headers: { "Accept": "application/json" }
+        });
+
+        if (!res.ok) throw new Error("Failed to fetch users");
+
+        const users = await res.json();
+
+        tableBody.innerHTML = "";
+
+        users.forEach(user => {
+            const tr = document.createElement("tr");
+
+            tr.innerHTML = `
+                <td>
+                    <div class="guest-info">
+                        <i class="fas fa-user me-2"></i>
+                        <span>${user.name}</span>
+                        <small class="guest-count">
+                            Joined ${new Date(user.created_at).toLocaleDateString()}
+                        </small>
+                    </div>
+                </td>
+
+                <td>
+                    <div class="room-info">
+                        <i class="fas fa-envelope me-2"></i>
+                        <span>${user.email}</span>
+                        <small class="room-number">
+                            ${user.phone ?? "N/A"}
+                        </small>
+                    </div>
+                </td>
+
+                <td>
+                    <span class="status-badge ${
+                        user.role === 'admin'
+                            ? 'status-booked'
+                            : 'status-checkedin'
+                    }">
+                        ${user.role}
+                    </span>
+                </td>
+
+                <td>
+                    <span class="status-badge status-checkedin">
+                        ${user.status ?? 'Active'}
+                    </span>
+                </td>
+
+                <td>
+                    ${user.last_login_at
+                        ? new Date(user.last_login_at).toLocaleString()
+                        : 'Never'}
+                </td>
+
+                <td>
+                    <div class="action-buttons">
+                        <button class="btn btn-sm btn-action" 
+                            onclick="editUser(${user.id})">
+                            <i class="fas fa-edit"></i>
+                        </button>
+                        <button class="btn btn-sm btn-action"
+                            onclick="deleteUser(${user.id})">
+                            <i class="fas fa-trash"></i>
+                        </button>
+                    </div>
+                </td>
+            `;
+
+            tableBody.appendChild(tr);
+        });
+
+    } catch (err) {
+        console.error(err);
+    }
+}
+
+loadUsers();
+</script>
+
+
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
