SPRINT 1: ADD UPDATE ROOMS

--- a/public/admin-side/admin/usermanagement.html
+++ b/public/admin-side/admin/usermanagement.html
@@ -562,8 +562,7 @@ loadUsers();
 
 
 <!-- Create User -->
-<script>
-document.addEventListener("DOMContentLoaded", () => {
+<script>document.addEventListener("DOMContentLoaded", () => {
 
     const addUserButton = document.getElementById("addUserBtn");
     const addUserModalEl = document.getElementById("addUserModal");
@@ -609,8 +608,6 @@ document.addEventListener("DOMContentLoaded", () => {
         });
 });
 </script>
-
-
 
 <!-- Update USERS -->
 <script>
