--- a/public/admin-side/receptionist/reservationdetails.html
+++ b/public/admin-side/receptionist/reservationdetails.html
@@ -16,7 +16,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&family=Poppins:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link href="../styles.css" rel="stylesheet">
+        <link href="../css/styles.css" rel="stylesheet">
     <link href="receptionist.css" rel="stylesheet">
     <style>
         /* Font Family Declarations */
