SPRINT 2: SELECT ROOM

--- a/public/client/select-room.html
+++ b/public/client/select-room.html
@@ -125,365 +125,13 @@
 </section>
 
 
-      <!-- Layout with Sidebar -->
-      <section class="select-room-layout">
-        <!-- Left: Rooms -->
-        <div class="rooms-container">
-          <div class="container">
-            <div class="rooms-grid">
+  <section class="select-room-layout">
+  <h2>Select a Room</h2>
 
-              <!-- basic Room -->
-              <div class="room-card" data-room-type="basic-studio">
-                <div class="room-card-grid">
-                  <div class="room-image-container">
-                    <img src="studio.jpg" alt="Basic Studio Room" class="room-image">
-                    <div class="room-image-overlay"></div>
-                  </div>
-                  <div class="room-details">
-                    <div class="room-info">
-                      <div class="room-header">
-                        <h3 class="room-name">Basic Studio Room</h3>
-                        <div class="room-specs">
-                          <div class="room-spec"><span class="spec-icon"></span><span>Queen Bed</span></div>
-                          <div class="room-spec"><span class="spec-icon"></span>•<span>2 Guests</span></div>
-                          <div class="room-spec"><span class="spec-icon"></span>•<span>15 m²</span></div>
-                        </div>
-                      </div>
-                      <p class="room-description">Elegant room featuring a comfortable king-size bed, modern amenities, and city views. Perfect for couples seeking luxury and comfort.</p>
-                      <button class="room-details-link">View room details <span class="external-icon">↗</span></button>
-                    </div>
-                    <div class="room-pricing">
-                      <div class="pricing-info">
-                        <div>
-                          <div class="price-label">From</div>
-                          <div class="price-value">₱922 <span class="price-period">/ night</span></div>
-                        </div>
-                        <div class="notice">
-                          <p style="color:#8B0000; font-size: 25x; margin: 8px 0 12px 0; font-weight: 500;">50% down payment</p>
-                        </div>
-                      </div>
-                      <button class="btn-show-rates" onclick="selectRoom('basic-studio', event)">BOOK NOW</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
+  <div id="searchSummary"></div>
 
-              <!-- Standard Room -->
-              <div class="room-card" data-room-type="standard-room">
-                <div class="room-card-grid">
-                  <div class="room-image-container">
-                    <img src="standard.jpg" alt="Standard Room" class="room-image">
-                    <div class="room-image-overlay"></div>
-                  </div>
-                  <div class="room-details">
-                    <div class="room-info">
-                      <div class="room-header">
-                        <h3 class="room-name">Standard Room</h3>
-                        <div class="room-specs">
-                          <div class="room-spec"><span class="spec-icon"></span><span>Queen Bed</span></div>
-                          <div class="room-spec"><span class="spec-icon"></span>•<span>2 Guests</span></div>
-                          <div class="room-spec"><span class="spec-icon"></span>•<span>17 m²</span></div>
-                        </div>
-                      </div>
-                      <p class="room-description">Spacious suite with separate living area, premium furnishings, and panoramic views. Includes complimentary breakfast and executive lounge access.</p>
-                      <button class="room-details-link">View room details <span class="external-icon">↗</span></button>
-                    </div>
-                    <div class="room-pricing">
-                      <div class="pricing-info">
-                        <div>
-                          <div class="price-label">From</div>
-                          <div class="price-value">₱2,599 <span class="price-period">/ night</span></div>
-                        </div>
-                        <div class="notice">
-                          <p style="color:#8B0000; font-size: 25x; margin: 8px 0 12px 0; font-weight: 500;">50% down payment</p>
-                        </div>
-                      </div>
-                      <button class="btn-show-rates" onclick="selectRoom('standard-room', event)">Select Room</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
+  <div id="roomsContainer"></div>
 
-              <!-- Family Room -->
-              <div class="room-card" data-room-type="family-room">
-                <div class="room-card-grid">
-                  <div class="room-image-container">
-                    <img src="family room.jpg" alt="Family Room" class="room-image">
-                    <div class="room-image-overlay"></div>
-                  </div>
-                  <div class="room-details">
-                    <div class="room-info">
-                      <div class="room-header">
-                        <h3 class="room-name">Family Room</h3>
-                        <div class="room-specs">
-                          <div class="room-spec"><span class="spec-icon"></span><span>Queen Bed</span></div>
-                          <div class="room-spec"><span class="spec-icon"></span>•<span>4 Guests</span></div>
-                          <div class="room-spec"><span class="spec-icon"></span>•<span>25 m²</span></div>
-                        </div>
-                      </div>
-                      <p class="room-description">Ultimate luxury with private terrace, butler service, and exclusive amenities. The pinnacle of hospitality for discerning guests.</p>
-                      <button class="room-details-link">View room details <span class="external-icon">↗</span></button>
-                    </div>
-                    <div class="room-pricing">
-                      <div class="pricing-info">
-                        <div>
-                          <div class="price-label">From</div>
-                          <div class="price-value">₱3,599 <span class="price-period">/ night</span></div>
-                        </div>
-                        <div class="notice">
-                          <p style="color:#8B0000; font-size: 25x; margin: 8px 0 12px 0; font-weight: 500;">50% down payment</p>
-                        </div>
-                      </div>
-                      <button class="btn-show-rates" onclick="selectRoom('family-room', event)">Select Room</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <!-- Premium Room -->
-              <div class="room-card" data-room-type="premium-deluxe">
-                <div class="room-card-grid">
-                  <div class="room-image-container">
-                    <img src="premium.jpg" alt="Premium Room" class="room-image">
-                    <div class="room-image-overlay"></div>
-                  </div>
-                  <div class="room-details">
-                    <div class="room-info">
-                      <div class="room-header">
-                        <h3 class="room-name">Premium Room</h3>
-                        <div class="room-specs">
-                          <div class="room-spec"><span class="spec-icon"></span><span>Queen Bed</span></div>
-                          <div class="room-spec"><span class="spec-icon"></span>•<span>2 Guests</span></div>
-                          <div class="room-spec"><span class="spec-icon"></span>•<span>20 m²</span></div>
-                        </div>
-                      </div>
-                      <p class="room-description">Ultimate luxury with private terrace, butler service, and exclusive amenities. The pinnacle of hospitality for discerning guests.</p>
-                      <button class="room-details-link">View room details <span class="external-icon">↗</span></button>
-                    </div>
-                    <div class="room-pricing">
-                      <div class="pricing-info">
-                        <div>
-                          <div class="price-label">From</div>
-                          <div class="price-value">₱3,599 <span class="price-period">/ night</span></div>
-                        </div>
-                        <div class="notice">
-                          <p style="color:#8B0000; font-size: 25x; margin: 8px 0 12px 0; font-weight: 500;">50% down payment</p>
-                        </div>
-                      </div>
-                      <button class="btn-show-rates" onclick="selectRoom('premium-deluxe', event)">BOOK NOW</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-            </div>
-          </div>
-        </div>
-
-<!-- Exclusive Add-ons (UPDATED) -->
-<div class="addons-container" style="display:none;">
-  <h2>Exclusive Add-ons</h2>
-  <div class="addons-grid">
-
-    <!-- Executive Lounge -->
-    <div class="addon-card">
-      <!-- <img src="executive-lounge.jpg" alt="Executive Lounge"> -->
-      <div class="addon-info">
-        <div class="addon-desc">
-          <h3>Extra bed/Rollaway bed</h3>
-          <p>Add an extra bed for additional comfort during your stay.</p>
-        </div>
-        <div class="addon-right">
-          <div class="addon-price">
-            <div class="price-main">₱550</div>
-            <div class="price-specs">Per Night</div>
-            <div class="price-note">Excluding Taxes and Fees</div>
-          </div>
-          <div class="addon-actions">
-            <button class="btn-add-detail" onclick="toggleAddonDetails(this)">Add Details</button>
-          </div>
-        </div>
-      </div>
-      <div class="addon-details" style="display:none;">
-        <div class="addon-details-row">
-          <div class="addon-details-left">
-            <label>Number of Nights</label>
-            <div class="quantity-box">
-              <button class="qty-btn" onclick="changeQty(this,-1)">−</button>
-              <input type="text" value="1" readonly>
-              <button class="qty-btn" onclick="changeQty(this,1)">+</button>
-            </div>
-          </div>
-          <div class="addon-details-right">
-            <div class="addon-total">
-              <div class="total-price">Total ₱0.00</div>
-              <div class="total-note">Including Taxes and Fees</div>
-            </div>
-            <div class="addon-actions">
-              <button class="btn-add-stay" onclick="addAddon('extra-bed', event)">Add to My Stay</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    
-    <!-- Breakfast Buffet -->
-    <div class="addon-card">
-      <!-- <img src="breakfast.jpg" alt="Breakfast Buffet"> -->
-      <div class="addon-info">
-        <div class="addon-desc">
-          <h3>Breakfast</h3>
-          <p>Wake up to a warm, freshly prepared breakfast to start your day right</p>
-        </div>
-        <div class="addon-right">
-          <div class="addon-price">
-            <div class="price-main">₱150</div>
-            <div class="price-specs">Per Person</div>
-            <div class="price-note">Excluding Taxes and Fees</div>
-          </div>
-          <div class="addon-actions">
-            <button class="btn-add-detail" onclick="toggleAddonDetails(this)">Add Details</button>
-          </div>
-        </div>
-      </div>
-      <div class="addon-details" style="display:none;">
-        <div class="addon-details-row">
-          <div class="addon-details-left">
-            <label>Number of Guests</label>
-            <div class="quantity-box">
-              <button class="qty-btn" onclick="changeQty(this,-1)">−</button>
-              <input type="text" value="1" readonly>
-              <button class="qty-btn" onclick="changeQty(this,1)">+</button>
-            </div>
-          </div>
-          <div class="addon-details-right">
-            <div class="addon-total">
-              <div class="total-price">Total ₱0.00</div>
-              <div class="total-note">Including Taxes and Fees</div>
-            </div>
-            <div class="addon-actions">
-              <button class="btn-add-stay" onclick="addAddon('breakfast', event)">Add to My Stay</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    
-    <!-- Wine Bottle -->
-    <div class="addon-card">
-      <!-- <img src="wine.jpg" alt="Wine Bottle"> -->
-      <div class="addon-info">
-        <div class="addon-desc">
-          <h3>Wine Bottle</h3>
-          <p>Celebrate special moments with a premium wine bottle delivered
-            to your room upon request.</p>
-        </div>
-        <div class="addon-right">
-          <div class="addon-price">
-            <div class="price-main">₱1,200</div>
-            <div class="price-specs">Per Bottle</div>
-            <div class="price-note">Excluding Taxes and Fees</div>
-          </div>
-          <div class="addon-actions">
-            <button class="btn-add-detail" onclick="toggleAddonDetails(this)">Add Details</button>
-          </div>
-        </div>
-      </div>
-      <div class="addon-details" style="display:none;">
-        <div class="addon-details-row">
-          <div class="addon-details-left">
-            <label>Quantity</label>
-            <div class="quantity-box">
-              <button class="qty-btn" onclick="changeQty(this,-1)">−</button>
-              <input type="text" value="1" readonly>
-              <button class="qty-btn" onclick="changeQty(this,1)">+</button>
-            </div>
-          </div>
-          <div class="addon-details-right">
-            <div class="addon-total">
-              <div class="total-price">Total ₱0.00</div>
-              <div class="total-note">Including Taxes and Fees</div>
-            </div>
-            <div class="addon-actions">
-              <button class="btn-add-stay" onclick="addAddon('wine-bottle', event)">Add to My Stay</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Airport Transfer -->
-    <div class="addon-card">
-      <!-- <img src="airport-transfer.jpg" alt="Airport Transfer"> -->
-      <div class="addon-info">
-        <div class="addon-desc">
-          <h3>Airport Transfer</h3>
-          <p>Enjoy a stress-free arrival or departure with our reliable
-            airport transfer service directly to and from the hotel.</p>
-        </div>
-        <div class="addon-right">
-          <div class="addon-price">
-            <div class="price-main">₱1,500</div>
-            <div class="price-specs">Per Trip</div>
-            <div class="price-note">Excluding Taxes and Fees</div>
-          </div>
-          <div class="addon-actions">
-            <button class="btn-add-stay" onclick="addAddon('airport-transfer', event)">Add to My Stay</button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Spa Package -->
-    <div class="addon-card">
-      <!-- <img src="spa.jpg" alt="Spa Package"> -->
-      <div class="addon-info">
-        <div class="addon-desc">
-          <h3>Spa Package</h3>
-          <p>Unwind and rejuvenate with our signature spa treatments designed
-            to refresh your body and mind.</p>
-        </div>
-        <div class="addon-right">
-          <div class="addon-price">
-            <div class="price-main">₱3,200</div>
-            <div class="price-specs">Per Session</div>
-            <div class="price-note">Excluding Taxes and Fees</div>
-          </div>
-          <div class="addon-actions">
-            <button class="btn-add-stay" onclick="addAddon('spa-package', event)">Add to My Stay</button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-
-
-    <!-- Late Checkout -->
-    <div class="addon-card">
-      <!-- <img src="late-checkout.jpg" alt="Late Checkout"> -->
-      <div class="addon-info">
-        <div class="addon-desc">
-          <h3>Late Checkout</h3>
-          <p>Extend your relaxation with the convenience of a late checkout until 3 PM.</p>
-        </div>
-        <div class="addon-right">
-          <div class="addon-price">
-            <div class="price-main">₱300</div>
-            <div class="price-specs">Per Hour</div>
-            <div class="price-note">Excluding Taxes and Fees</div>
-          </div>
-          <div class="addon-actions">
-            <button class="btn-add-stay" onclick="addAddon('late-checkout', event)">Add to My Stay</button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </div>
-  <!-- <button class="btn-skip" onclick="skipAddon()">Skip</button> -->
-</div>
 
 
       <!--Existing cart and page structure remain the same -->
@@ -497,7 +145,7 @@
           </div>
 
           <!-- Room Items Container -->
-          <div id="roomsContainer"></div>
+          <div id="cartRoomsContainer"></div>
       </div> 
 
           <!-- Total Section -->
