--- a/public/client/guest-details.html
+++ b/public/client/guest-details.html
@@ -312,7 +312,7 @@
   </section>
 
   <!-- Guest Details & Cart -->
-  <section class="container mb-5" id="guest">
+<section class="container mb-5" id="guest">
     <div class="row gy-4">
       <!-- Guest Form -->
 <div class="col-lg-7">
@@ -320,50 +320,12 @@
     <!-- Guest Details -->
     <div class="section-block">
       <h5 class="mb-3" style="color: #8B5A3C;">Guest Details</h5>
-      <div class="accordion" id="roomsAccordion">
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="headingOne">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne">
-              Room 1 — Deluxe Room
-            </button>
-          </h2>
-          <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#roomsAccordion">
-            <div class="accordion-body">
-              <!-- Guest Info -->
-              <div class="mb-3">
-                <label class="form-label">Full Name</label>
-                <input type="text" class="form-control" placeholder="Enter full name">
-              </div>
-              <div class="mb-3">
-                <label class="form-label">Email Address</label>
-                <input type="email" class="form-control" placeholder="Enter email address">
-              </div>
-              <div class="mb-3">
-                <label class="form-label">Phone Number</label>
-                <input type="tel" class="form-control" placeholder="Enter phone number">
-              </div>
-              <div class="mb-3">
-                <label class="form-label">Special Requests</label>
-                <textarea class="form-control" rows="3" placeholder="Any special requests (optional)"></textarea>
-              </div>
-
-              <!-- Payment Section INSIDE accordion -->
-              <div class="mt-4">
-                <h6 class="mb-3" style="font-size: 1.1rem; color: #8B5A3C;">
-                  <i class="fa-solid fa-lock me-2"></i>Payment 
-                </h6>
-                <div class="card card-body">
-                  <p class="text-muted small mb-3">
-                    We use secure transmission and encrypted storage to protect your information.
-                  </p>
-                </div>
-              </div>
-            </div>
+     <div class="accordion" id="roomsAccordion">
+    </div>
+    </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
      <!-- Policies -->
     <div class="bg-white p-4 rounded shadow-sm unified-section mt-3">
       <h5 style="color: #8B5A3C;">Policies</h5>
@@ -401,10 +363,12 @@
       <aside class="cart-section">
         <div class="booking-summary-container">
           <div class="cart-header">
-            <h2 class="cart-title">Your Cart: <span id="itemCount">0</span></h2>
+            <h2 class="cart-title">Your Cart: <span id="itemCount">0 Rooms</span></h2>
             <div class="cart-total">Total <span id="totalAmount">₱0.00</span></div>
             <div class="cart-subtitle">Including taxes and fees</div>
           </div>
+
+
           <div id="roomsContainer"></div>
 
           <div class="total-section total-highlight">
@@ -413,13 +377,15 @@
             <div class="total-subtitle">Including taxes and fees</div>
           </div>
 
-          <button class="btn-add-room" onclick="addRoom()">ADD A ROOM</button>
-          <button class="btn btn-continue btn-sm ms-auto">CONFIRM BOOKING</button>
+          <button class="btn-add-room" onclick="openRoomModal()">ADD A ROOM</button>
+          <button class="btn btn-continue btn-sm ms-auto" onclick="confirmBooking()">CONFIRM BOOKING</button>
         </div>
       </aside>
     </div>
   </section>
 
+
+  
 
 
 
@@ -463,5 +429,27 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="guest-details.js"></script>
+
+
+  <!-- Room Selection Modal -->
+<div class="modal fade" id="roomSelectModal" tabindex="-1" aria-labelledby="roomSelectLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="roomSelectLabel">Select Room Type</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div id="roomOptionsContainer" class="list-group">
+          <!-- Room options will be rendered here dynamically -->
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" id="confirmRoomBtn" class="btn btn-primary" disabled>Add Room</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 </body>
 </html>
