--- a/public/admin-side/admin/roommanagement.html
+++ b/public/admin-side/admin/roommanagement.html
@@ -623,6 +623,33 @@ document.addEventListener('DOMContentLoaded', loadRooms);
         .addEventListener("submit", async function (e) {
             e.preventDefault();
 
+            const roomNumber = this.room_number.value.trim();
+            const type = this.type.value;
+            const price = Number(this.price.value);
+            const capacity = Number(this.capacity.value);
+
+            if (!roomNumber) {
+                alert("Room number is required");
+                return;
+            }
+
+            if (!type) {
+                alert("Please select a room type");
+                return;
+            }
+
+            if (price <= 0) {
+                alert("Price must be greater than 0");
+                return;
+            }
+
+            if (capacity < 1) {
+                alert("Capacity must be at least 1");
+                return;
+            }
+
+
+
             const formData = new FormData(this);
 
             try {
@@ -636,8 +663,14 @@ document.addEventListener('DOMContentLoaded', loadRooms);
                 const data = await res.json();
 
                 if (!res.ok) {
+                    if (res.status === 422 && data.errors) {
+                        const firstError = Object.values(data.errors)[0][0];
+                        alert(firstError);
+                        return;
+                    }
                     throw new Error(data.message || "Failed");
                 }
+
 
                 alert("Rooms Added");
                 addRoomTypeModal.hide();
