SPRINT 3: RESERVATION RECEPTIONST SHOW

--- a/public/admin-side/admin/roommanagement.html
+++ b/public/admin-side/admin/roommanagement.html
@@ -350,7 +350,7 @@
                         </select>
                     </div>
 
-                  <div class="table-responsive table-scroll">
+                  <div class="table-wrapper">
                        <table class="table table-hover reservations-table">
                             <thead class="table-light">
                                 <tr>
@@ -401,6 +401,7 @@
                        updateRoomKPIs(rooms);
                 }
       </script>
+
 
 <!-- FILTER ROWS -->
                 <script>
