--- a/public/admin-side/receptionist/reservationreceptionist.html
+++ b/public/admin-side/receptionist/reservationreceptionist.html
@@ -519,6 +519,12 @@
                                 <tbody id="reservationTable"></tbody>
                             </table>
                     </div>
+                    <div class="pagination-controls">
+                    <button id="prevBtn" class="btn btn-sm btn-outline-secondary">Previous</button>
+                    <span id="pageInfo"></span>
+                    <button id="nextBtn" class="btn btn-sm btn-outline-secondary">Next</button>
+                    </div>
+
                 </div>
             </main>
         </div>
