--- a/public/admin-side/receptionist/reservationdetails.html
+++ b/public/admin-side/receptionist/reservationdetails.html
@@ -245,11 +245,11 @@
                 <div class="row g-1 mb-2">
                     <div class="col-md-6">
                         <label class="form-label small mb-1">Reservation ID</label>
-                        <input type="text" class="form-control form-control-sm" value="12345">
+                        <input id="reservationId" type="text" class="form-control form-control-sm">
                     </div>
                     <div class="col-md-6">
                         <label class="form-label small mb-1">Status</label>
-                        <select class="form-select form-select-sm">
+                        <select id="reservationStatus" class="form-select form-select-sm">
                             <option selected>Approved Reservation</option>
                             <option>Pending</option>
                             <option>Cancelled</option>
@@ -272,11 +272,12 @@
                 <div class="row g-1 mb-2">
                     <div class="col-md-4">
                         <label class="form-label small mb-1">Check-in</label>
-                        <input type="date" class="form-control form-control-sm" value="2024-12-15">
+                        
+                        <input id="checkIn" type="date" class="form-control form-control-sm">
                     </div>
                     <div class="col-md-4">
                         <label class="form-label small mb-1">Check-out</label>
-                        <input type="date" class="form-control form-control-sm" value="2024-12-17">
+                        <input id="checkOut" type="date" class="form-control form-control-sm">
                     </div>
                     <div class="col-md-4">
                         <label class="form-label small mb-1">Date Booked</label>
@@ -288,7 +289,7 @@
                 <div class="row g-1 mb-2">
                     <div class="col-md-3">
                         <label class="form-label small mb-1">First Name</label>
-                        <input type="text" class="form-control form-control-sm" value="John">
+                        <input id="guestFirstName" type="text" class="form-control form-control-sm">
                     </div>
                     <div class="col-md-3">
                         <label class="form-label small mb-1">Last Name</label>
@@ -296,15 +297,11 @@
                     </div>
                     <div class="col-md-3">
                         <label class="form-label small mb-1">Contact Number</label>
-                        <input type="text" class="form-control form-control-sm" value="0092345678">
+                        <input id="guestPhone" type="text" class="form-control form-control-sm">
                     </div>
                     <div class="col-md-3">
                         <label class="form-label small mb-1">E-mail Address</label>
-                        <input type="email" class="form-control form-control-sm" value="johndoe@gmail.com">
-                    </div>
-                    <div class="col-md-8">
-                        <label class="form-label small mb-1">Address</label>
-                        <input type="text" class="form-control form-control-sm" value="123 Elms Street., Fourth Century, Makati, Philippines">
+                        <input id="guestEmail" type="email" class="form-control form-control-sm">
                     </div>
                     <div class="col-md-2">
                         <label class="form-label small mb-1">Adults</label>
@@ -316,7 +313,7 @@
                     </div>
                     <div class="col-12">
                         <label class="form-label small mb-1">Special Request/s</label>
-                        <textarea class="form-control form-control-sm" rows="1">We would like to enter the room with the Air Conditioner already turned on for our comfort.</textarea>
+                        <textarea id="specialRequest" class="form-control form-control-sm"></textarea>
                     </div>
                 </div>
 
@@ -475,5 +472,6 @@
 
        <script src="../js/script.js"></script>
     <script src="../js/auth.js"></script>
+    <script src="../receptionist/reservationDetails.js"></script>
 </body>
 </html>
